# hacker-devices

./: README.md
acoustic-phantom/: README.md
aperture-phantom/: README.md
aurora-phantom/: README.md
axle-tap/: README.md
badusb-injector/: README.md  phase1_conceptual_architecture.md  phase2_component_selection_schematics.md  phase3_pcb_blueprints_layout.md  phase4_software_stack.md
ble-phantom/: README.md  phase1_conceptual_architecture.md  phase2_component_selection_schematics.md  phase3_pcb_blueprints_layout.md  phase4_software_stack.md
can-bus-infiltrator/: README.md  phase1_conceptual_architecture.md  phase2_component_selection_schematics.md  phase3_pcb_blueprints_layout.md  phase4_software_stack.md
can-creeper/: README.md  phase1_conceptual_architecture.md  phase2_component_selection_schematics.md  phase3_pcb_blueprints_layout.md  phase4_software_stack.md
cc-stiletto/: README.md
coil-grip/: README.md
dram-phantom/: README.md
echo-phantom/: README.md
eddy-phantom/: README.md
emmc-flash-dumper/: README.md  phase1_conceptual_architecture.md  phase2_component_selection_schematics.md  phase3_pcb_blueprints_layout.md  phase4_software_stack.md
fiber-phantom/: README.md
forge-probe/: README.md
ghostbus/: README.md
gnss-phantom/: README.md
hart-bleeder/: README.md
hdmi-siphon/: README.md  hdmi-siphon-cli.py  phase1_conceptual_architecture.md  phase2_component_selection_schematics.md  phase3_pcb_blueprints_layout.md  phase4_software_stack.md
infrared-phantom/: phase3_pcb_blueprints_layout.md  (+3 more)
uwb-phantom/firmware/main/: CMakeLists.txt
(+1436 files in other folders)
